Assets/CSS/modals_stylesheet.css
#book-modal, .open-book-modal {
    position: absolute;
    background-color: rgba(250, 235, 215, 0.25);
    width: 100vw;
    height: 100vh;
    display: none;
    justify-content: center;
    align-items: center;
}

.modal-content {
    background-color: antiquewhite;
    width: 75%;
    padding: 3vmin;
    border-radius: 5px;
}

.close-box {
    display: flex;
    justify-content: end;
}

.close:hover, .close-book:hover {
    filter: invert(68%) sepia(92%) saturate(505%) hue-rotate(1deg) brightness(106%) contrast(103%);
    cursor: pointer;
}

fieldset {
    padding: 0/*3vmin*/;
    border-radius: 5px;
    border-color: var(--modal-color);
    color: var(--modal-color);
}

.field-content {
    display: grid;
    justify-content: center;
}

.field-content h1 {
    font-size: 5vmin;
    margin-bottom: 5vmin;
    text-align: center;
}

.normal-header {
    color: var(--modal-color);
}

.submitted-header {
    color: forestgreen;
}

.field-content > div:not(.submit-form) {
    display: grid;
    grid-template-columns: 250px 300px;
    gap: 2vmin;
}

.field-content > div:not(:last-child) {
    margin-bottom: 2vmin;
}

label {
    font-size: 0.75rem;
    justify-self: end;
}

input, select {
    font-size: 0.75rem;
    padding-left: 0.5rem;
    border-color: var(--modal-color);
}

input:focus {
    border: 2px solid forestgreen;
    outline: none;
    color: forestgreen;
}

::placeholder {
    color: goldenrod;
    opacity: 0.5;
}

input:invalid {
    border: none;
    border: 3px solid goldenrod;
}

select {
    border: 3px solid goldenrod;
    color: rgba(218, 165, 32, 0.5);
    background-color: white;
}

option {
    color: goldenrod;
    background-color: antiquewhite;
}

.submit-form {
    display: grid;
    width: 100%;
    margin-top: 2vmin;
    grid-template-rows: 1fr 3fr;
    grid-template-columns: 1fr 1fr;
    gap: 0;
}

button {
    grid-row: 1 / 2;
    font-size: 0.5rem;
    font-weight: bold;
    width: 150px;
    padding: 5px;
    border-radius: 5px;
    justify-self: center;
}

.submit-button {
    grid-column: 1 / 3;
    background-color: forestgreen;
}

.submit-button:hover {
    background-color: darkseagreen;
    color: forestgreen;
}

.donate-button, .search-button {
    display: none;
}

.donate-button {
    grid-column: 1 / 2;
    background-color: forestgreen;
}

.donate-button:hover {
    background-color: chartreuse;
    color: forestgreen;
}

.search-button {
    grid-column: 2 / 3;
    background-color: goldenrod;
}

.search-button:hover {
    background-color: gold;
    color: goldenrod;
}

.messages {
    grid-column: 1 / 3;
    grid-row: 2 / 3;
    font-size: 0.5rem;
    font-style: italic;
    align-self: center;
    justify-self: center;
    text-align: center;
    width: 100%;
    height: 100%;
}

.error {
    font-weight: bold;
    color: red;
}

.action {
    color: goldenrod;
    font-weight: normal;
    font-size: 0.75rem;
    margin-top: 2vmin;
}

.open-book-modal {
    position: absolute;
    background-color: transparent;
    width: 100vw;
    height: 100vh;
    display: none;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.book-modal-content {
    background-color: antiquewhite;
    border-left-width: 3vmin;
    border-right-width: 3vmin;
    border-left-style: solid;
    border-right-style: solid;
    width: 75%;
    height: 75%;
    border-radius: 5px;
    display: grid;
    grid-template-columns: 1fr 1fr;
}

.blank-side {
    grid-column: 1 / 2;
}

.details {
    grid-column: 2 / 3;
    padding: 5vmin;
    color: var(--dark-brown);
    text-align: center;
    font-size: 3vmin;
    border-left: 2px solid burlywood;
    display: grid;
    grid-template-rows: 2fr 3fr 1fr 1fr 1fr; 
}

.title-display {
    grid-row: 1 / 2;
    color: black;
    font-size: 5vmin;
}

@media(max-width: 920px) {
    #book-modal {
        width: 100%;
    }
    fieldset {
        padding: 0;
        border: none;
    }
    .field-content > h1 {
        text-align: center;
    }
    .field-content > div {
        grid-template-columns: 30vmin 35vmin;
    }
    label, input, select, option {
        font-size: 3vmin;
    }
    .book-modal-content {
        width: 90%;
    }
}

@media(max-width: 600px) {
    #book-modal {
        align-items: flex-end;
    }
    .modal-content {
        height: 90%;
        width: 95%;
        margin-bottom: 2vmin;
    }
    fieldset {
        padding: 3vmin;
    }
    .field-content > * {
        border: 2px dashed transparent;
    }
    .field-content > h1 {
        font-size: 5vmin;
    }
    .field-content > div {
        display: flex;
        flex-wrap: wrap;
        flex-direction: column;
        gap: 0;
    }
    .field-content > div:not(:last-child) {
        margin-bottom: 2vmin;
    }
    label, input, select, option {
        font-size: 4vmin;
    }
    .submit-form {
        align-items: center;
    }
    .book-modal-content {
        height: 70%;
    }
}

@media(max-width: 450px) {
    .field-content > h1 {
        font-size: 6.5vmin;
    }
    label, input, select, option {
        font-size: 6vmin;
    }
    .book-modal-content {
        height: 50%;
    }
    .details {
        font-size: 5vmin;
    }
    .title-display {
        font-size: 7vmin;
    }
}

